# EdusignAttendance

./: .gitignore  README.md  main.py  pyproject.toml
edusign_attendance/: .env_exemple  Edusign.py  edusign_attendance.py  excel_wirtter.py
