[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edusign-attendance"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Paul GELAS", email = "paul.gelas@epitech.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/edusign-attendance#readme"
Issues = "https://github.com/unknown/edusign-attendance/issues"
Source = "https://github.com/unknown/edusign-attendance"

[tool.hatch.version]
path = "edusign_attendance/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "xlsxwriter",
  "aiohttp",
  "asyncio",
  "python-dotenv",
  "requests",
  "pytest",
  "pytest-cov",
]
python="3.10"
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=edusign_attendance --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "edusign_attendance/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
